# blueprint-project

./: .gitignore  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name_short}}/: main.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_name_short}}/utils/: logger.py
